k8s/api-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cluterip-svc
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 8080
      targetPort: 8080
