k8s/postgres-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
