k8s/redis-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip-svc
spec:
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
